@@ -78,6 +78,9 @@ w.  Fixed a bug that caused "$@" to expand incorrectly when used as the right
 x.  Fixed a slight cosmetic problem when printing commands containing a
     `>&word' redirection.
 
+y.  Fixed a problem that could cause here documents to not be created correctly
+    if the system temporary directory did not allow writing.
+
 2.  Changes to Readline
 
 a.  Change to history expansion functions to treat `^' as equivalent to word
